--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 byteorder = "1.5.0"
 libbpf-rs = "0.24.8"
 libc = "0.2.169"
+regex = "1.11.1"
 
 [build-dependencies]
 libbpf-cargo = "0.24.8"
